# vub

./: readme
example/: CMakeLists.txt  capped-array.h  gpu-device.cc  gpu-device.h  helper.h  main.cc  types.h
include/: prefix-sum.comp  prefix-sum.h
